# mm-healthfair

./: .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  README.md  config.toml  example.toml  index.html  mkdocs.yml  objects.inv  poetry.toml  pyproject.toml  requirements.txt
.github/workflows/: build_mkdocs.yml
docs/: functions.md  getting_started.md  index.md  mimiciv.md  model_card.md  preprocessing.md
functions/: index.html
getting_started/: index.html
mimiciv/: index.html
notebooks/: 01 MIMIC-IV Health Outcome Definition.ipynb  02 MIMIC-IV Data Exploration.ipynb  03 MIMIC-IV Feature Extraction.ipynb
outputs/exploration/: t1_ext_stay.html  t1_icu_admission.html  t1_in_hosp_death.html  t1_nh_discharge.html
outputs/ext_data_full/: test_ids_strfull.txt  training_ids_strfull.txt  val_ids_strfull.txt
outputs/extracted_data/: test_ids_nstr.txt  test_ids_strat_text.txt  training_ids_nstr.txt  training_ids_strat_text.txt  val_ids_nstr.txt  val_ids_strat_text.txt
outputs/fairness/: fair_concat_stdyn_run.txt
outputs/reference/: feat_name_map.json  icd10_codes.json  icd10oncology.txt  lab_items.txt
preprocessing/: index.html
scripts/: gen_ref_pages.py
search/: search_index.json
src/: analysis.py  create_train_test.py  data.py  datasets.py  evaluate.py  extract_data.py  extract_episodes_from_subjects.py  extract_subjects.py  models.py  postprocess.py  prepare_data.py  preprocess.py  preprocess_data.py  process_mimic_data.py  train.py  train_bl.py  train_ehr_benchmark.py  train_rf.py
src/benchmark/: datasets.py  ehr_module.py  normal_range.json
src/data/: mimic4.py  mimiciv.py  preprocessing.py  subject.py  util.py
src/haim/: MIMIC_IV_HAIM_API.py
src/utils/: feature_names.txt  functions.py  labitems.txt  mimiciv.py  preprocessing.py  subject.py  util.py
