[tool.poetry]
name = "mm-healthfair"
version = "0.1.0"
description = ""
authors = ["Sophie Martin <s.martin.20@ucl.ac.uk>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
scikit-learn = "^1.4.1.post1"
seaborn = "^0.13.2"
ipykernel = "^6.29.3"
pre-commit = "^3.7.0"
tqdm = "^4.66.3"
toml = "^0.10.2"
ruff = "^0.3.5"
icd-mappings = "^0.3.8"
polars = "^0.20.23"
lightning = "^2.2.4"
wandb = "^0.17.0"
torch = "2.3.0"
torchvision = "^0.18.0"

[tool.poetry.group.dev.dependencies]
deptry = "^0.16.1"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
extend-select = [
    "I",  # isort
    "UP", # pyupgrade
    "PL", # pylint
    "B"]

ignore = [
    "E501", # too many lines
    "PLR0913", # too many arguments in function
    ]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
